# code-peek

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: checks.yml
src/: cli.rs  display.rs  file.rs  git.rs  main.rs
