[package]
name = "code-peek"
version = "0.1.0"
edition = "2021"
author = "Timon Jurschitsch"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
ignore = "0.4.22"
nom = "7.1.3"
term-table = "1.3.2"
