[package]
name = "code-peek"
version = "0.1.0"
edition = "2021"
author = "Timon Jurschitsch"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["cargo"] }
colored = "2.1.0"
ignore = "0.4.22"
nom = "7.1.3"
term-table = "1.3.2"
